Fixed roles gap for safari

--- a/main.css
+++ b/main.css
@@ -1424,7 +1424,6 @@ footer {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    gap: 1em;
 }
 .roleBox {
     width: 335px;
@@ -1433,7 +1432,7 @@ footer {
     border: black 1.5px solid;
     border-radius: 10px;
     padding: 0 10px;
-    margin: 20px 0 0 0;
+    margin: 10px 4.25px 0 4.25px;
     padding: 0 10px;
 }
 #roleTitle {
